fix: tasklist bottom task behind footer

--- a/src/components/task_list/TaskList.css
+++ b/src/components/task_list/TaskList.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: transparent;
-    margin-bottom: 5rem;
+    margin-bottom: 11rem;
 }
 
 .task-list-title {
